--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@midudev/tailwind-animations": "^0.2.0",
     "@tailwindcss/vite": "^4.1.16",
+    "@vercel/analytics": "^1.5.0",
     "astro": "^5.15.3",
     "flag-icons": "^7.5.0",
     "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
+    "@astrojs/vercel": "^8.0.4",
     "@iconify/json": "^2.2.403",
     "@iconify/tailwind": "^1.2.0",
     "@iconify/tailwind4": "^1.1.0"
