--- a/package.json
+++ b/package.json
@@ -9,12 +9,26 @@
     "astro": "astro"
   },
   "dependencies": {
+    "-": "^0.0.1",
+    "@analogjs/astro-angular": "^2.0.4",
+    "@angular/animations": "^20.3.10",
+    "@angular/build": "^20.3.9",
+    "@angular/common": "^20.3.10",
+    "@angular/compiler": "^20.3.10",
+    "@angular/compiler-cli": "^20.3.10",
+    "@angular/core": "^20.3.10",
+    "@angular/language-service": "^20.3.10",
+    "@angular/platform-browser": "^20.3.10",
+    "@angular/platform-server": "^20.3.10",
     "@midudev/tailwind-animations": "^0.2.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.16",
     "@vercel/analytics": "^1.5.0",
     "astro": "^5.15.3",
     "flag-icons": "^7.5.0",
-    "tailwindcss": "^4.1.16"
+    "rxjs": "^7.8.2",
+    "tailwindcss": "^4.1.16",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@astrojs/vercel": "^8.0.4",
