--- a/public/angular/calculator/content/package.json
+++ b/public/angular/calculator/content/package.json
@@ -33,6 +33,7 @@
     "@angular/ssr": "^20.3.9",
     "@tailwindcss/postcss": "^4.1.17",
     "express": "^5.1.0",
+    "mathjs": "^15.1.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.17",
