--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/language-service": "^20.3.10",
     "@angular/platform-browser": "^20.3.10",
     "@angular/platform-server": "^20.3.10",
+    "@astrojs/svelte": "^7.2.2",
     "@midudev/tailwind-animations": "^0.2.0",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.16",
@@ -27,6 +28,7 @@
     "astro": "^5.15.3",
     "flag-icons": "^7.5.0",
     "rxjs": "^7.8.2",
+    "svelte": "^5.43.6",
     "tailwindcss": "^4.1.16",
     "tslib": "^2.8.1"
   },
